Log errors with oisd.nl and sqllite